AC_INIT([gnome-user-docs], [3.26.0],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-user-docs])
AM_INIT_AUTOMAKE([1.11 tar-ustar dist-xz no-dist-gzip])
AM_SILENT_RULES([yes])

YELP_HELP_INIT

AM_MAINTAINER_MODE([enable])

AC_OUTPUT([
Makefile
gnome-help/Makefile
system-admin-guide/Makefile
])
