AC_INIT([gnome-user-docs], [49.1],
        [https://gitlab.gnome.org/GNOME/gnome-user-docs/issues])
AM_INIT_AUTOMAKE([1.11 check-news tar-ustar dist-xz no-dist-gzip foreign])
AM_SILENT_RULES([yes])

YELP_HELP_INIT

AM_MAINTAINER_MODE([enable])

AC_OUTPUT([
Makefile
gnome-help/Makefile
system-admin-guide/Makefile
])
