AC_INIT(gnome2-user-guide)

SCROLLKEEPER_REQUIRED=0.3.11
AC_SUBST(SCROLLKEEPER_REQUIRED)

AM_INIT_AUTOMAKE(gnome2-user-docs, 2.0.6)

AM_MAINTAINER_MODE

dnl ====================================
dnl = Begin tests for scrollkeeper
dnl ====================================
AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
if test x$SCROLLKEEPER_CONFIG = xno; then
  AC_MSG_ERROR(Couldn't find scrollkeeper-config, please install the scrollkeeper packaga)
fi
dnl ====================================
dnl = End tests for scrollkeeper
dnl ====================================

dnl ====================================
dnl = Test whether jw is installed
dnl ====================================
AC_PATH_PROG(JW,jw,no)
if test x$JW = xno; then
  HAVE_JW="no"
else
  HAVE_JW="yes"
fi
AM_CONDITIONAL(HAVE_JW, test "x$HAVE_JW" = "xyes")
AC_SUBST(HAVE_JW)
dnl ====================================
dnl = End tests for jw
dnl ====================================


AC_OUTPUT([
Makefile
gnome-user-docs.spec
gnome2-user-guide/Makefile
gnome2-user-guide/C/Makefile
gnome2-user-guide/ro/Makefile
gnome2-user-guide/hu/Makefile
gnome2-user-guide/de/Makefile
gnome2-user-guide/es/Makefile
gnome2-user-guide/fr/Makefile
gnome2-user-guide/it/Makefile
gnome2-user-guide/ja/Makefile
gnome2-user-guide/ko/Makefile
gnome2-user-guide/sv/Makefile
gnome2-user-guide/zh_CN/Makefile
gnome2-user-guide/zh_TW/Makefile
gnome2-accessibility-guide/Makefile
gnome2-accessibility-guide/C/Makefile
gnome2-system-admin-guide/Makefile
gnome2-system-admin-guide/C/Makefile
introduction-to-gnome/Makefile
introduction-to-gnome/C/Makefile
])
