AC_INIT([gnome-user-docs], [2.32.0],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-user-docs])
AM_INIT_AUTOMAKE

GNOME_DOC_INIT

AM_MAINTAINER_MODE

PKG_CHECK_MODULES(GNOME2_USER_DOCS, [ gnome-doc-utils >= 0.5.6 ])

AC_OUTPUT([
Makefile
gnome-user-docs.spec
gnome2-user-guide/Makefile
gnome2-accessibility-guide/Makefile
gnome2-system-admin-guide/Makefile
])
