include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = gnome-help

DOC_LINGUAS = de es gl sv

DOC_FIGURES = \
	figures/gnome.png \
	figures/gnome-searchtool.png \
	figures/nautilus.png \
	figures/nautilus-icons.png \
	figures/printing-select.png \
	figures/shell-activities.png \
	figures/shell-apps-open.png \
	figures/shell-appts.png \
	figures/shell-dash.png \
	figures/shell-exit.png \
	figures/shell-files.png \
	figures/shell-introduction.png \
	figures/shell-top-bar.png \
	figures/shell-windows.png \
	figures/shell-workspaces.png \
	figures/shell.png \
	figures/system-run.png \
	figures/universal-access-menu.png \
	figures/yelp-icon-big.png

DOC_INCLUDES = legal.xml

DOC_PAGES = \
	a11y-bouncekeys.page \
	a11y-braille.page \
	a11y-contrast.page \
	a11y-dwellclick.page \
	a11y-font-size.page \
	a11y-icon.page \
	a11y-locate-pointer.page \
	a11y-mag.page \
	a11y.page \
	a11y-right-click.page \
	a11y-screen-reader.page \
	a11y-slowkeys.page \
	a11y-stickykeys.page \
	a11y-visualalert.page \
	backup-check.page \
	backup-frequency.page \
	backup-how.page \
	backup-restore.page \
	backup-thinkabout.page \
	backup-what.page \
	backup-where.page \
	backup-why.page \
	bluetooth-connect-device.page \
	bluetooth-problem-connecting.page \
	bluetooth-remove-connection.page \
	bluetooth-send-file.page \
	bluetooth-turn-on-off.page \
	clock.page \
	clock-calendar.page \
	clock-set.page \
	clock-timezone.page \
	disk-benchmark.page \
	disk-capacity.page \
	disk-check.page \
	disk-format.page \
	disk-partitions.page \
	display-dimscreen.page \
	display-lock.page \
	fallback-mode.page \
	files-browse.page \
	files-copy.page \
	files-delete.page \
	files-hidden.page \
	files-open.page \
	files.page \
	files-preview-music.page \
	files-recover.page \
	files-removedrive.page \
	files-rename.page \
	files-search.page \
	files-select.page \
	files-share.page \
	files-sort.page \
	files-tilde.page \
	get-involved.page \
	hardware-driver.page \
	hardware.page \
	hardware-problems-bluetooth.page \
	hardware-problems-graphics.page \
	index.page \
	keyboard.page \
	keyboard-cursor-blink.page \
	keyboard-inputmethods.page \
	keyboard-layouts.page \
	keyboard-repeat-keys.page \
	look-background.page \
	look-display-fuzzy.page \
	look-resolution.page \
	media.page \
	more-help.page \
	mouse.page \
	mouse-disabletouchpad.page \
	mouse-doubleclick.page \
	mouse-drag-threshold.page \
	mouse-lefthanded.page \
	mouse-middleclick.page \
	mouse-mousekeys.page \
	mouse-problem-notmoving.page \
	mouse-sensitivity.page \
	mouse-touchpad-click.page \
	mouse-wakeup.page \
	nautilus-behavior.page \
	nautilus-bookmarks-edit.page \
	nautilus-connect.page \
	nautilus-display.page \
	nautilus-file-properties-basic.page \
	nautilus-file-properties-permissions.page \
	nautilus-list.page \
	nautilus-prefs.page \
	nautilus-preview.page \
	nautilus-views.page \
	net-adhoc.page \
	net-editcon.page \
	net-findip.page \
	net-fixed-ip-address.page \
	net-macaddress.page \
	net-manual.page \
	net-mobile.page \
	net-nonm.page \
	net-no-wireless-connection.page \
	net-othersconnect.page \
	net-otherscontrol.page \
	net.page \
	net-passwordok-noconnect.page \
	net-proxy.page \
	net-slow.page \
	net-vpn-connect.page \
	net-what-is-ip-address.page \
	net-wired-connect.page \
	net-wireless-airplane.page \
	net-wireless-connect.page \
	net-wireless-disconnecting.page \
	net-wireless-find.page \
	net-wireless-hidden.page \
	net-wireless-troubleshooting.page \
	net-wireless-wepwpa.page \
	net-wrongnetwork.page \
	power-batterybroken.page \
	power-batteryestimate.page \
	power-batterylife.page \
	power-batteryoptimal.page \
	power-batteryslow.page \
	power-batterywindows.page \
	power-brighter.page \
	power-closelid.page \
	power-constantfan.page \
	power-hotcomputer.page \
	power-lowpower.page \
	power-nowireless.page \
	power-othercountry.page \
	power.page \
	power-suspendfail.page \
	power-suspendhibernate.page \
	power-turnoffbutton.page \
	power-whydim.page \
	power-willnotturnon.page \
	prefs.page \
	prefs-language.page \
	prefs-display.page \
	printing-2sided.page \
	printing-booklet.page \
	printing-booklet-duplex.page \
	printing-booklet-singlesided.page \
	printing-cancel-job.page \
	printing-differentsize.page \
	printing-envelopes.page \
	printing-order.page \
	printing-paperjam.page \
	printing-select.page \
	printing-setup-default-printer.page \
	printing-setup-networked.page \
	printing-setup.page \
	screen-shot-record.page \
	session-fingerprint.page \
	session-language.page \
	session-screenlocks.page \
	session-smartcard.page \
	shell-apps-favorites.page \
	shell-apps-forcequit.page \
	shell-apps-open.page \
	shell-exit.page \
	shell-introduction.page \
	shell-messages.page \
	shell-overview.page \
	shell-session-status.page \
	shell-terminology.page \
	shell-windows-lost.page \
	shell-windows-maximize.page \
	shell-windows.page \
	shell-windows-states.page \
	shell-windows-switching.page \
	shell-workspaces-movewindow.page \
	shell-workspaces.page \
	shell-workspaces-switch.page \
	sound-alert.page \
	sound-usemic.page \
	sound-usespeakers.page \
	sound-volume.page \
	tips.page \
	tips-specialchars.page \
	user-accounts.page \
	user-addguest.page \
	user-add.page \
	user-admin-change.page \
	user-admin-explain.page \
	user-admin-problems.page \
	user-changepassword.page \
	user-changepicture.page \
	user-delete.page \
	user-forgottenpassword.page \
	user-goodpassword.page \
	web.page \
	windows-key.page

dist-hook: doc-dist-hook
