@YELP_HELP_RULES@

EXTRA_DIST = C/gnome-help.its

HELP_ID = gnome-help

HELP_MEDIA = \
	figures/audio-volume-high-symbolic.svg \
	figures/audio-volume-low-symbolic.svg \
	figures/audio-volume-medium-symbolic.svg \
	figures/audio-volume-muted-symbolic.svg \
	figures/battery-caution-charging-symbolic.svg \
	figures/battery-caution-symbolic.svg \
	figures/battery-empty-charging-symbolic.svg \
	figures/battery-empty-symbolic.svg \
	figures/battery-full-charged-symbolic.svg \
	figures/battery-full-charging-symbolic.svg \
	figures/battery-full-symbolic.svg \
	figures/battery-good-charging-symbolic.svg \
	figures/battery-good-symbolic.svg \
	figures/battery-low-charging-symbolic.svg \
	figures/battery-low-symbolic.svg \
	figures/battery-missing-symbolic.svg \
	figures/bluetooth-active-symbolic.svg \
	figures/bluetooth-disabled-symbolic.svg \
	figures/bluetooth-menu.png \
	figures/color-average.png \
	figures/color-camera.png \
	figures/color-display.png \
	figures/color-printer.png \
	figures/color-profile-default.png \
	figures/color-space.png \
	figures/display-dual-monitors.webm \
	figures/documents-icon.png \
	figures/emblem-system-symbolic.svg \
	figures/emblem-system.png \
	figures/gnome.png \
	figures/go-down.png \
	figures/input-keyboard-symbolic.png \
	figures/input-methods-switcher.png \
	figures/keyboard-key-menu.svg \
	figures/nautilus-icons.png \
	figures/network-cellular-3g-symbolic.svg \
	figures/network-cellular-4g-symbolic.svg \
	figures/network-cellular-acquiring-symbolic.svg \
	figures/network-cellular-connected-symbolic.svg \
	figures/network-cellular-edge-symbolic.svg \
	figures/network-cellular-gprs-symbolic.svg \
	figures/network-cellular-signal-excellent-symbolic.svg \
	figures/network-cellular-signal-good-symbolic.svg \
	figures/network-cellular-signal-none-symbolic.svg \
	figures/network-cellular-signal-ok-symbolic.svg \
	figures/network-cellular-signal-weak-symbolic.svg \
	figures/network-cellular-umts-symbolic.svg \
	figures/network-error-symbolic.svg \
	figures/network-idle-symbolic.svg \
	figures/network-no-route-symbolic.svg \
	figures/network-offline-symbolic.svg \
	figures/network-receive-symbolic.svg \
	figures/network-transmit-receive-symbolic.svg \
	figures/network-transmit-symbolic.svg \
	figures/network-vpn-acquiring-symbolic.svg \
	figures/network-vpn-symbolic.svg \
	figures/network-wired-acquiring-symbolic.svg \
	figures/network-wired-disconnected-symbolic.svg \
	figures/network-wired-symbolic.svg \
	figures/preferences-desktop-accessibility-symbolic.svg \
	figures/printing-select.png \
	figures/shell-activities-classic.png \
	figures/shell-activities.png \
	figures/shell-appmenu-classic.png \
	figures/shell-appmenu-shell.png \
	figures/shell-apps-open.png \
	figures/shell-appts-classic.png \
	figures/shell-appts.png \
	figures/shell-dash.png \
	figures/shell-exit-classic.png \
	figures/shell-exit.png \
	figures/shell-lock.png \
	figures/shell-notification.png \
	figures/shell-top-bar-classic.png \
	figures/shell-top-bar.png \
	figures/shell-window-list-classic.png \
	figures/shell-workspaces.png \
	figures/shell.png \
	figures/top-bar-icons-classic.png \
	figures/top-bar-icons.png \
	figures/universal-access-menu.png \
	figures/network-wireless-acquiring-symbolic.svg \
	figures/network-wireless-connected-symbolic.svg \
	figures/network-wireless-encrypted-symbolic.svg \
	figures/network-wireless-signal-excellent-symbolic.svg \
	figures/network-wireless-signal-good-symbolic.svg \
	figures/network-wireless-signal-none-symbolic.svg \
	figures/network-wireless-signal-ok-symbolic.svg \
	figures/network-wireless-signal-weak-symbolic.svg \
	figures/notification-buttons.png \
	figures/system-run-symbolic.svg \
	figures/view-more-symbolic.svg \
	figures/yelp-icon-big.png

HELP_FILES = \
	legal.xml \
	a11y-bouncekeys.page \
	a11y-braille.page \
	a11y-contrast.page \
	a11y-dwellclick.page \
	a11y-font-size.page \
	a11y-icon.page \
	a11y-mag.page \
	a11y.page \
	a11y-right-click.page \
	a11y-screen-reader.page \
	a11y-slowkeys.page \
	a11y-stickykeys.page \
	a11y-visualalert.page \
	about-this-guide.page \
	accounts-add.page \
	accounts-disable-service.page \
	accounts-provider-not-available.page \
	accounts-remove.page \
	accounts-which-application.page \
	accounts-whyadd.page \
	accounts.page \
	backup-check.page \
	backup-frequency.page \
	backup-how.page \
	backup-restore.page \
	backup-thinkabout.page \
	backup-what.page \
	backup-where.page \
	backup-why.page \
	bluetooth.page \
	bluetooth-connect-device.page \
	bluetooth-problem-connecting.page \
	bluetooth-remove-connection.page \
	bluetooth-send-file.page \
	bluetooth-turn-on-off.page \
	bluetooth-visibility.page \
	color.page \
	clock-calendar.page \
	clock-set.page \
	clock-timezone.page \
	clock-world.page \
	clock.page \
	color-assignprofiles.page \
	color-calibrate-camera.page \
	color-calibrate-printer.page \
	color-calibrate-scanner.page \
	color-calibrate-screen.page \
	color-calibrationcharacterization.page \
	color-calibrationdevices.page \
	color-calibrationtargets.page \
	color-canshareprofiles.page \
	color-gettingprofiles.page \
	color-howtoimport.page \
	color-missingvcgt.page \
	color-notifications.page \
	color-notspecifiededid.page \
	color-testing.page \
	color-whatisprofile.page \
	color-whatisspace.page \
	color-why-calibrate.page \
	color-whyimportant.page \
	contacts-add-remove.page \
	contacts.page \
	contacts-connect.page \
	contacts-edit-details.page \
	contacts-link-unlink.page \
	contacts-search.page \
	contacts-setup.page \
	disk-benchmark.page \
	disk-capacity.page \
	disk-check.page \
	disk-format.page \
	disk-partitions.page \
	disk.page \
	display-blank.page \
	display-brightness.page \
	display-dual-monitors.page \
	files-autorun.page \
	files-browse.page \
	files-copy.page \
	files-delete.page \
	files-disc-write.page \
	files-hidden.page \
	files-lost.page \
	files-open.page \
	files-preview.page \
	files-recover.page \
	files-removedrive.page \
	files-rename.page \
	files-search.page \
	files-select.page \
	files-share.page \
	files-sort.page \
	files-templates.page \
	files-tilde.page \
	files.page \
	get-involved.page \
	gnome-classic.page \
	gnome-version.page \
	hardware-auth.page \
	hardware-cardreader.page \
	hardware-driver.page \
	hardware-problems-graphics.page \
	hardware.page \
	help-irc.page \
	help-mailing-list.page \
	index.page \
	keyboard-cursor-blink.page \
	keyboard-key-menu.page \
	keyboard-key-super.page \
	keyboard-layouts.page \
	keyboard-nav.page \
	keyboard-osk.page \
	keyboard-repeat-keys.page \
	keyboard-shortcuts-set.page \
	keyboard.page \
	look-background.page \
	look-display-fuzzy.page \
	look-resolution.page \
	media.page \
	more-help.page \
	mouse-doubleclick.page \
	mouse-lefthanded.page \
	mouse-middleclick.page \
	mouse-mousekeys.page \
	mouse-problem-notmoving.page \
	mouse-sensitivity.page \
	mouse-touchpad-click.page \
	mouse-wakeup.page \
	mouse.page \
	music-cantplay-drm.page \
	music-player-ipodtransfer.page \
	music-player-newipod.page \
	nautilus-behavior.page \
	nautilus-bookmarks-edit.page \
	nautilus-connect.page \
	nautilus-display.page \
	nautilus-file-properties-basic.page \
	nautilus-file-properties-permissions.page \
	nautilus-list.page \
	nautilus-prefs.page \
	nautilus-preview.page \
	nautilus-views.page \
	net-antivirus.page \
	net-browser.page \
	net-default-browser.page \
	net-default-email.page \
	net-email-virus.page \
	net-email.page \
	net-findip.page \
	net-firewall-on-off.page \
	net-firewall-ports.page \
	net-fixed-ip-address.page \
	net-general.page \
	net-install-flash.page \
	net-macaddress.page \
	net-manual.page \
	net-mobile.page \
	net-othersconnect.page \
	net-othersedit.page \
	net-problem.page \
	net-proxy.page \
	net-security-tips.page \
	net-security.page \
	net-slow.page \
	net-vpn-connect.page \
	net-what-is-ip-address.page \
	net-wired-connect.page \
	net-wired.page \
	net-wireless-adhoc.page \
	net-wireless-airplane.page \
	net-wireless-connect.page \
	net-wireless-disconnecting.page \
	net-wireless-find.page \
	net-wireless-hidden.page \
	net-wireless-noconnection.page \
	net-wireless-troubleshooting-device-drivers.page \
	net-wireless-troubleshooting-hardware-check.page \
	net-wireless-troubleshooting-hardware-info.page \
	net-wireless-troubleshooting-initial-check.page \
	net-wireless-troubleshooting.page \
	net-wireless-wepwpa.page \
	net-wireless.page \
	net.page \
	power-autobrightness.page \
	power-autosuspend.page \
	power-batteryestimate.page \
	power-batterylife.page \
	power-batteryoptimal.page \
	power-batteryslow.page \
	power-batterywindows.page \
	power-closelid.page \
	power-constantfan.page \
	power-hotcomputer.page \
	power-lowpower.page \
	power-nowireless.page \
	power-othercountry.page \
	power-status.page \
	power-suspendfail.page \
	power-suspend.page \
	power-whydim.page \
	power-willnotturnon.page \
	power-wireless.page \
	power.page \
	prefs-display.page \
	prefs-language.page \
	prefs-sharing.page \
	prefs.page \
	printing-2sided.page \
	printing-booklet-duplex.page \
	printing-booklet-singlesided.page \
	printing-booklet.page \
	printing-cancel-job.page \
	printing-differentsize.page \
	printing-envelopes.page \
	printing-inklevel.page \
	printing-name-location.page \
	printing-order.page \
	printing-paperjam.page \
	printing-select.page \
	printing-setup-default-printer.page \
	printing-setup.page \
	printing-streaks.page \
	printing-to-file.page \
	printing.page \
	privacy.page \
	privacy-history-recent-off.page \
	privacy-location.page \
	privacy-purge.page \
	privacy-screen-lock.page \
	screen-shot-record.page \
	session-fingerprint.page \
	session-formats.page \
	session-language.page \
	session-screenlocks.page \
	sharing.page \
	sharing-bluetooth.page \
	sharing-desktop.page \
	sharing-displayname.page \
	sharing-media.page \
	sharing-personal.page \
	shell-apps-favorites.page \
	shell-apps-open.page \
	shell-exit.page \
	shell-introduction.page \
	shell-keyboard-shortcuts.page \
	shell-lockscreen.page \
	shell-notifications.page \
	shell-overview.page \
	shell-windows-lost.page \
	shell-windows-maximize.page \
	shell-windows-states.page \
	shell-windows-switching.page \
	shell-windows-tiled.page \
	shell-windows.page \
	shell-workspaces-movewindow.page \
	shell-workspaces-switch.page \
	shell-workspaces.page \
	sound-alert.page \
	sound-broken.page \
	sound-crackle.page \
	sound-nosound.page \
	sound-usemic.page \
	sound-usespeakers.page \
	sound-volume.page \
	status-icons.page \
	tips-specialchars.page \
	tips.page \
	translate.page \
	user-accounts.page \
	user-add.page \
	user-admin-change.page \
	user-admin-explain.page \
	user-admin-problems.page \
	user-autologin.page \
	user-changepassword.page \
	user-changepicture.page \
	user-delete.page \
	user-goodpassword.page \
	video-dvd.page \
	video-sending.page \
	wacom-left-handed.page \
	wacom-mode.page \
	wacom-multi-monitor.page \
	wacom-stylus.page \
	wacom.page

HELP_LINGUAS = as ca cs de el fi fr es gl gu he hi hu id it ja kn lv mr nl pa pt_BR ru sl sr sr@latin sv te vi ta zh_CN
