@YELP_HELP_RULES@

EXTRA_DIST = C/gnome-help.its

HELP_ID = gnome-help

HELP_LINGUAS = as ca cs da de el es eu fa fi fr gl gu he hi hr hu id it ja kn ko lv lt mr nl pa pl pt pt_BR ro ru sl sr sr@latin sv te th tr uk vi ta zh_CN

HELP_MEDIA = \
	figures/bluetooth-active-symbolic.svg \
	figures/bluetooth-symbolic.svg \
	figures/camera-photo-symbolic.svg \
	figures/camera-video-symbolic.svg \
	figures/classic-topbar-accessibility.svg \
	figures/classic-topbar-airplane-mode.svg \
	figures/classic-topbar-audio-volume-muted.svg \
	figures/classic-topbar-audio-volume.svg \
	figures/classic-topbar-battery-charging.svg \
	figures/classic-topbar-battery-discharging.svg \
	figures/classic-topbar-battery-level-100-charged.svg \
	figures/classic-topbar-battery-level-100.svg \
	figures/classic-topbar-bluetooth-active.svg \
	figures/classic-topbar-find-location.svg \
	figures/classic-topbar-input-method.svg \
	figures/classic-topbar-media-record.svg \
	figures/classic-topbar-microphone-sensitivity-muted.svg \
	figures/classic-topbar-microphone-sensitivity.svg \
	figures/classic-topbar-network-cellular-acquiring.svg \
	figures/classic-topbar-network-cellular-connected.svg \
	figures/classic-topbar-network-cellular-signal-none.svg \
	figures/classic-topbar-network-cellular-signal.svg \
	figures/classic-topbar-network-vpn-acquiring.svg \
	figures/classic-topbar-network-vpn.svg \
	figures/classic-topbar-network-wired.svg \
	figures/classic-topbar-network-wired-acquiring.svg \
	figures/classic-topbar-network-wired-disconnected.svg \
	figures/classic-topbar-network-wired-no-route.svg \
	figures/classic-topbar-network-wireless-acquiring.svg \
	figures/classic-topbar-network-wireless-connected.svg \
	figures/classic-topbar-network-wireless-no-route.svg \
	figures/classic-topbar-network-wireless-signal-excellent.svg \
	figures/classic-topbar-network-wireless-signal-none.svg \
	figures/classic-topbar-network-wireless-signal.svg \
	figures/classic-topbar-night-light.svg \
	figures/classic-topbar-pointer.svg \
	figures/classic-topbar-screen-shared.svg \
	figures/classic-topbar-system-shutdown.svg \
	figures/classic-topbar-thunderbolt-acquiring.svg \
	figures/color-average.png \
	figures/color-camera.png \
	figures/color-display.png \
	figures/color-printer.png \
	figures/color-space.png \
	figures/display-dual-monitors.webm \
	figures/emblem-system-symbolic.svg \
	figures/emoji-flags-symbolic.svg \
	figures/gnome.svg \
	figures/go-down-symbolic.svg \
	figures/go-next-symbolic.svg \
	figures/input-keyboard-symbolic.png \
	figures/input-methods-switcher.png \
	figures/keyboard-key-calculator.svg \
	figures/keyboard-key-computer.svg \
	figures/keyboard-key-eject.svg \
	figures/keyboard-key-folder.svg \
	figures/keyboard-key-home.svg \
	figures/keyboard-key-mail.svg \
	figures/keyboard-key-media.svg \
	figures/keyboard-key-menu.svg \
	figures/keyboard-key-mute.svg \
	figures/keyboard-key-next.svg \
	figures/keyboard-key-pause.svg \
	figures/keyboard-key-play.svg \
	figures/keyboard-key-previous.svg \
	figures/keyboard-key-search.svg \
	figures/keyboard-key-stop.svg \
	figures/keyboard-key-voldown.svg \
	figures/keyboard-key-volup.svg \
	figures/keyboard-key-world.svg \
	figures/nautilus-folder-search-symbolic.svg \
	figures/nautilus-icons.png \
	figures/net-wired-ethernet-diagram.svg \
	figures/network-wired-symbolic.svg \
	figures/network-wireless-disabled-symbolic.svg \
	figures/printing-select.png \
	figures/ps-button.svg \
	figures/ps-create.svg \
	figures/rotation-allowed-symbolic.svg \
	figures/rotation-locked-symbolic.svg \
	figures/screenshot-tool.png \
	figures/shell-activities-dash.png \
	figures/shell-appts-classic.png \
	figures/shell-appts.png \
	figures/shell-exit-classic.png \
	figures/shell-exit-classic-expanded.png \
	figures/shell-exit-expanded.png \
	figures/shell-exit.png \
	figures/shell-top-bar-classic.png \
	figures/shell-top-bar.png \
	figures/shell-window-list-classic.png \
	figures/shell-workspaces.png \
	figures/system-lock-screen-symbolic.svg \
	figures/system-run-symbolic.svg \
	figures/system-shutdown-symbolic.svg \
	figures/tile-a11y.svg \
	figures/tile-files.svg \
	figures/tile-hardware.svg \
	figures/tile-media.svg \
	figures/tile-help.svg \
	figures/tile-net.svg \
	figures/tile-settings.svg \
	figures/tile-home.svg \
	figures/tile-tips.svg \
	figures/topbar-accessibility.svg \
	figures/topbar-airplane-mode.svg \
	figures/topbar-audio-volume-muted.svg \
	figures/topbar-audio-volume.svg \
	figures/topbar-battery-charging.svg \
	figures/topbar-battery-discharging.svg \
	figures/topbar-battery-level-100-charged.svg \
	figures/topbar-battery-level-100.svg \
	figures/topbar-bluetooth-active.svg \
	figures/topbar-find-location.svg \
	figures/topbar-input-method.svg \
	figures/topbar-media-record.svg \
	figures/topbar-microphone-sensitivity-muted.svg \
	figures/topbar-microphone-sensitivity.svg \
	figures/topbar-network-cellular-acquiring.svg \
	figures/topbar-network-cellular-connected.svg \
	figures/topbar-network-cellular-signal-none.svg \
	figures/topbar-network-cellular-signal.svg \
	figures/topbar-network-vpn-acquiring.svg \
	figures/topbar-network-vpn.svg \
	figures/topbar-network-wired-acquiring.svg \
	figures/topbar-network-wired-disconnected.svg \
	figures/topbar-network-wired-no-route.svg \
	figures/topbar-network-wired.svg \
	figures/topbar-network-wireless-acquiring.svg \
	figures/topbar-network-wireless-connected.svg \
	figures/topbar-network-wireless-no-route.svg \
	figures/topbar-network-wireless-signal-excellent.svg \
	figures/topbar-network-wireless-signal-none.svg \
	figures/topbar-network-wireless-signal.svg \
	figures/topbar-night-light.svg \
	figures/topbar-pointer.svg \
	figures/topbar-screen-shared.svg \
	figures/topbar-system-shutdown.svg \
	figures/topbar-thunderbolt-acquiring.svg \
	figures/touch-edge-scroll.svg \
	figures/touch-hold.svg \
	figures/touch-overview.svg \
	figures/touch-pinch-to-zoom.svg \
	figures/touch-osk.svg \
	figures/touch-rotate.svg \
	figures/touch-scroll.svg \
	figures/touch-tap.svg \
	figures/touch-unfullscreen.svg \
	figures/touch-workspaces.svg \
	figures/view-more-symbolic.svg \
	figures/yelp-icon-big.svg

HELP_FILES = \
	legal.xml \
	a11y-bouncekeys.page \
	a11y-braille.page \
	a11y-contrast.page \
	a11y-dwellclick.page \
	a11y-font-size.page \
	a11y-icon.page \
	a11y-mag.page \
	a11y.page \
	a11y-right-click.page \
	a11y-screen-reader.page \
	a11y-slowkeys.page \
	a11y-stickykeys.page \
	a11y-visualalert.page \
	about.page \
	about-hardware.page \
	about-hostname.page \
	about-os.page \
	about-this-guide.page \
	accounts-add.page \
	accounts-disable-service.page \
	accounts-provider-not-available.page \
	accounts-remove.page \
	accounts-which-application.page \
	accounts-whyadd.page \
	accounts.page \
	backup-check.page \
	backup-frequency.page \
	backup-how.page \
	backup-restore.page \
	backup-thinkabout.page \
	backup-what.page \
	backup-where.page \
	backup-why.page \
	bluetooth.page \
	bluetooth-connect-device.page \
	bluetooth-device-specific-pairing.page \
	bluetooth-problem-connecting.page \
	bluetooth-remove-connection.page \
	bluetooth-send-file.page \
	bluetooth-turn-on-off.page \
	bluetooth-visibility.page \
	clock-calendar.page \
	clock-set.page \
	clock-timezone.page \
	clock-world.page \
	clock.page \
	color.page \
	color-assignprofiles.page \
	color-calibrate-camera.page \
	color-calibrate-printer.page \
	color-calibrate-scanner.page \
	color-calibrate-screen.page \
	color-calibrationcharacterization.page \
	color-calibrationdevices.page \
	color-calibrationtargets.page \
	color-canshareprofiles.page \
	color-gettingprofiles.page \
	color-howtoimport.page \
	color-missingvcgt.page \
	color-notifications.page \
	color-notspecifiededid.page \
	color-testing.page \
	color-whatisprofile.page \
	color-whatisspace.page \
	color-why-calibrate.page \
	color-whyimportant.page \
	contacts-add-remove.page \
	contacts.page \
	contacts-connect.page \
	contacts-edit-details.page \
	contacts-link-unlink.page \
	contacts-search.page \
	contacts-setup.page \
	disk-benchmark.page \
	disk-capacity.page \
	disk-check.page \
	disk-format.page \
	disk-partitions.page \
	disk-repair.page \
	disk-resize.page \
	disk.page \
	display-blank.page \
	display-brightness.page \
	display-dual-monitors.page \
	display-night-light.page \
	files-autorun.page \
	files-browse.page \
	files-copy.page \
	files-delete.page \
	files-disc-write.page \
	files-hidden.page \
	files-lost.page \
	files-open.page \
	files-preview.page \
	files-recover.page \
	files-removedrive.page \
	files-rename.page \
	files-rename-multiple.page \
	files-rename-music-metadata.page \
	files-search.page \
	files-select.page \
	files-share.page \
	files-sort.page \
	files-templates.page \
	files-tilde.page \
	files.page \
	get-involved.page \
	gnome-classic.page \
	gnome-version.page \
	hardware-auth.page \
	hardware-cardreader.page \
	hardware-driver.page \
	hardware-problems-graphics.page \
	hardware.page \
	help-irc.page \
	help-matrix.page \
	index.page \
	keyboard-cursor-blink.page \
	keyboard-key-menu.page \
	keyboard-key-super.page \
	keyboard-layouts.page \
	keyboard-nav.page \
	keyboard-osk.page \
	keyboard-repeat-keys.page \
	keyboard-shortcuts-set.page \
	keyboard.page \
	look-background.page \
	look-display-fuzzy.page \
	look-resolution.page \
	media.page \
	more-help.page \
	mouse-doubleclick.page \
	mouse-lefthanded.page \
	mouse-middleclick.page \
	mouse-mousekeys.page \
	mouse-problem-notmoving.page \
	mouse-sensitivity.page \
	mouse-touchpad-click.page \
	mouse-wakeup.page \
	mouse.page \
	music-cantplay-drm.page \
	nautilus-behavior.page \
	nautilus-bookmarks-edit.page \
	nautilus-connect.page \
	nautilus-display.page \
	nautilus-file-properties-basic.page \
	nautilus-file-properties-permissions.page \
	nautilus-list.page \
	nautilus-prefs.page \
	nautilus-preview.page \
	nautilus-views.page \
	net-antivirus.page \
	net-browser.page \
	net-default-browser.page \
	net-default-email.page \
	net-email-virus.page \
	net-email.page \
	net-findip.page \
	net-firewall-on-off.page \
	net-firewall-ports.page \
	net-fixed-ip-address.page \
	net-general.page \
	net-macaddress.page \
	net-manual.page \
	net-mobile.page \
	net-othersconnect.page \
	net-othersedit.page \
	net-problem.page \
	net-proxy.page \
	net-security-tips.page \
	net-security.page \
	net-slow.page \
	net-vpn-connect.page \
	net-what-is-ip-address.page \
	net-wired-connect.page \
	net-wired.page \
	net-wireless-adhoc.page \
	net-wireless-airplane.page \
	net-wireless-connect.page \
	net-wireless-disconnecting.page \
	net-wireless-find.page \
	net-wireless-hidden.page \
	net-wireless-noconnection.page \
	net-wireless-troubleshooting-device-drivers.page \
	net-wireless-troubleshooting-hardware-check.page \
	net-wireless-troubleshooting-hardware-info.page \
	net-wireless-troubleshooting-initial-check.page \
	net-wireless-troubleshooting.page \
	net-wireless-wepwpa.page \
	net-wireless.page \
	net-wrongnetwork.page \
	net.page \
	parental-controls.page \
	power-autobrightness.page \
	power-autosuspend.page \
	power-batteryestimate.page \
	power-batterylife.page \
	power-batteryoptimal.page \
	power-batteryslow.page \
	power-batterywindows.page \
	power-closelid.page \
	power-constantfan.page \
	power-hotcomputer.page \
	power-lowpower.page \
	power-nowireless.page \
	power-othercountry.page \
	power-percentage.page \
	power-profile.page \
	power-status.page \
	power-suspendfail.page \
	power-suspend.page \
	power-whydim.page \
	power-willnotturnon.page \
	power-wireless.page \
	power.page \
	prefs-display.page \
	prefs-language.page \
	prefs-sharing.page \
	prefs.page \
	printing-2sided.page \
	printing-booklet-duplex.page \
	printing-booklet-singlesided.page \
	printing-booklet.page \
	printing-cancel-job.page \
	printing-differentsize.page \
	printing-envelopes.page \
	printing-inklevel.page \
	printing-name-location.page \
	printing-order.page \
	printing-paperjam.page \
	printing-select.page \
	printing-setup-default-printer.page \
	printing-setup.page \
	printing-streaks.page \
	printing-to-file.page \
	printing.page \
	privacy.page \
	privacy-history-recent-off.page \
	privacy-location.page \
	privacy-purge.page \
	privacy-screen-lock.page \
	quick-settings.page \
	remote-login.page \
	screen-shot-record.page \
	session-fingerprint.page \
	session-formats.page \
	session-language.page \
	session-screenlocks.page \
	sharing.page \
	sharing-bluetooth.page \
	sharing-desktop.page \
	sharing-media.page \
	sharing-personal.page \
	sharing-secure-shell.page \
	shell-apps-auto-start.page \
	shell-apps-favorites.page \
	shell-apps-open.page \
	shell-exit.page \
	shell-introduction.page \
	shell-keyboard-shortcuts.page \
	shell-lockscreen.page \
	shell-notifications.page \
	shell-overview.page \
	shell-wellbeing.page \
	shell-windows-lost.page \
	shell-windows-maximize.page \
	shell-windows-states.page \
	shell-windows-switching.page \
	shell-windows-tiled.page \
	shell-windows.page \
	shell-workspaces-movewindow.page \
	shell-workspaces-switch.page \
	shell-workspaces.page \
	sound-alert.page \
	sound-broken.page \
	sound-crackle.page \
	sound-nosound.page \
	sound-usemic.page \
	sound-usespeakers.page \
	sound-volume.page \
	status-icons.page \
	tips-specialchars.page \
	tips.page \
	touchscreen-gestures.page \
	translate.page \
	user-accounts.page \
	user-add.page \
	user-admin-change.page \
	user-admin-explain.page \
	user-admin-problems.page \
	user-autologin.page \
	user-changepassword.page \
	user-changepicture.page \
	user-delete.page \
	user-goodpassword.page \
	video-dvd.page \
	video-sending.page \
	wacom-left-handed.page \
	wacom-map-buttons.page \
	wacom-mode.page \
	wacom-multi-monitor.page \
	wacom-stylus.page \
	wacom-tablet-unknown.page \
	wacom.page
