include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = system-admin-guide
DOC_ENTITIES =			\
	appendixa.xml		\
	appendixb.xml		\
	fontconfig.xml		\
	gconf.xml		\
	glossary.xml		\
	help.xml		\
	lockdown.xml		\
	menustructure.xml	\
	mimetypes.xml		\
	performance.xml		\
	screensavers.xml	\
	sessions.xml		\
	themes.xml		\
	legal.xml

DOC_LINGUAS = it
