include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = user-guide
DOC_ENTITIES =			\
	glossary.xml		\
	gosbasic.xml		\
	goscustdesk.xml		\
	goseditmainmenu.xml	\
	gosnautilus.xml		\
	gosoverview.xml		\
	gospanel.xml		\
	gosstartsession.xml	\
	gostools.xml		\
	legal.xml

DOC_LINGUAS =
