@YELP_HELP_RULES@

HELP_ID = system-admin-guide

HELP_FILES = \
	appearance.page \
	dconf.page \
	dconf-custom-defaults.page \
	dconf-keyfiles.page \
	dconf-lockdown.page \
	dconf-nfs-home.page \
	dconf-profiles.page \
	dconf-snippets.xml \
	desktop-favorite-applications.page \
	extensions-enable.page \
	extensions-lockdown.page \
	extensions.page	\
	fonts-user.page	\
	index.page \
	keyboard-layout.page \
	legal.xml \
	lockdown-command-line.page \
	lockdown-file-saving.page \
	lockdown-online-accounts.page \
	lockdown-printing.page \
	lockdown-repartitioning.page \
	login.page \
	login-automatic.page \
	login-banner.page \
	login-enterprise.page \
	login-fingerprint.page \
	login-userlist-disable.page \
	mime-types.page	\
	mime-types-application.page \
	mime-types-application-user.page \
	mime-types-custom.page \
	mime-types-custom-user.page \
	network-printer-config.page \
	session-custom.page \
	session-user.page \
	software.page \
	sundry.page \
	user-settings.page

HELP_MEDIA =

HELP_LINGUAS =
