@YELP_HELP_RULES@

HELP_ID = system-admin-guide

HELP_FILES = \
	appearance.page \
	dconf-custom-defaults.page \
	dconf-keyfiles.page \
	dconf-lockdown.page \
	dconf-nfs-home.page \
	dconf.page \
	dconf-profiles.page \
	dconf-snippets.xml \
	desktop-background.page \
	desktop-favorite-applications.page \
	desktop-lockscreen.page \
	desktop-shield.page \
	extensions-enable.page \
	extensions-lockdown.page \
	extensions.page	\
	fonts.page \
	fonts-user.page	\
	index.page \
	keyboard-layout.page \
	legal.xml \
	lockdown-command-line.page \
	lockdown-file-saving.page \
	lockdown-online-accounts.page \
	lockdown-printing.page \
	lockdown-repartitioning.page \
	login-automatic.page \
	login-banner.page \
	login-enterprise.page \
	login-fingerprint.page \
	login-logo.page \
	login.page \
	login-userlist-disable.page \
	logout-automatic.page \
	mime-types-application.page \
	mime-types-application-user.page \
	mime-types-custom.page \
	mime-types-custom-user.page \
	mime-types.page	\
	network.page \
	network-printer-config.page \
	network-server-list.page \
	network-vpn.page \
	overrides.page \
	power-dim-screen.page \
	processes.page \
	session-custom.page \
	session-debug.page \
	session-user.page \
	setup.page \
	software.page \
	sundry.page \
	user-settings.page

HELP_MEDIA =

HELP_LINGUAS = cs de es gl hu ko pt_BR sv
